fixed spacing issues in header

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ a {
   font-family: 'Lobster', cursive;
   color: white;
   font-size: 1rem;
-  padding-top: 24px;
 }
 
 @media (min-width: 40rem) {
@@ -27,7 +26,7 @@ a {
     font-family: 'Lobster', cursive;
     color: white;
     font-size: 3rem;
-    padding-top: 24px;
+    padding-top: 2rem;
   }
 }
 
@@ -40,6 +39,8 @@ header {
   top: 0;
   left: 0;
   z-index: 1;
+  padding: 1rem;
+  align-items: center;
 }
 
 .nav-bar {
@@ -59,7 +60,7 @@ header {
   color: white;
   background: #33E0DA;
   border-radius: 5px 5px 5px 5px;
-  padding: 0px 0.5rem;
+  margin: 0px 0.5rem;
 }
 
 .nav-bar__item a {
@@ -74,10 +75,10 @@ header {
   }
 }
 
-.nav-bar__items {
+/*.nav-bar__items {
   padding-top: 24px;
   list-style: none;
-}
+}*/
 
 @media (min-width: 40rem) {
  .nav-bar__items {
